--- a/TP-7-LABO/nbproject/project.properties
+++ b/TP-7-LABO/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tp.pkg7.labo.TP7LABO
+main.class=tp.pkg7.labo.Colegio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
